welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:4: error: not found: value compteur
return compteur A
       ^