welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
var compteurA = 0
compteurA = Math.abs(a - 10)
return compteur A
}